questions-store-k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: questions-store
  name: questions-store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: questions-store
  template:
    metadata:
      labels:
        app: questions-store
    spec:
      containers:
      - image: chaimamnsr/questions-store:latest
        name: questions-store
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 3
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 3
