questions-store-k8s/pod-successful.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: questions-store
  name: questions-store
spec:
  containers:
  - image: chaimamnsr/questions-store:latest
    name: questions-store
    imagePullPolicy: Always
    ports:
    - name: http
      containerPort: 8080
    readinessProbe:
      httpGet:
        path: /
        port: http
