questions-store-k8s/pod-with-error.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: questions-store
  name: questions-store
spec:
  containers:
  - image: chaimamnsr/questions-store:latest
    name: questions-store
    ports:
    - name: http
      containerPort: 8080
