questions-store-k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: questions-store-service
  labels:
    app: questions-store
spec:
  ports:
  - port: 80          # the external app port: can be changed
    targetPort: 8080  # the internal app port
  selector:
    app: questions-store
